--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,7 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Serious Game/Assets/Models/Homes/Home1/Home2.fbx
+Serious Game/Assets/Models/Homes/Home1.fbx
+Serious Game/Assets/Models/Homes/Home1.fbx.meta
+Serious Game/Assets/Models/Homes/Home2.fbx
+Serious Game/Assets/Models/Homes/Home2.fbx.meta
